<resources>
    <string name="app_name">Burger Calorie Counter</string>
    <string name="action_settings">Settings</string>

    <!--Below are the labels for the user interface controls-->

    <string name="one">Beef Patty</string>
    <string name="two">Lamb Patty</string>
    <string name="three">Ostrich Patty</string>

    <string name="prosciutto">Prosciutto</string>
    <string name="cheddar">Asiago Cheese</string>
    <string name="provolone">Creme Fraiche</string>

    <string name="sauce">Caviar sauce up to one teaspoon</string>
    <string name="calorie">Calories?</string>

    <string name="bung_img">bun</string>

</resources>
